# lawn-mower

./: .gitignore  Dockerfile  README.md  docker-compose.yaml
src/fws_base_controller/: package.xml  setup.cfg  setup.py
src/fws_base_controller/fws_base_controller/: controller.py
src/fws_gazebo/: CMakeLists.txt  package.xml
src/fws_gazebo/launch/: sim.launch.py
src/fws_msgs/: CMakeLists.txt  package.xml
src/fws_msgs/srv/: SetMode.srv
src/fwsbot/: CMakeLists.txt  fwsbot_hardware_interface.xml  package.xml
src/fwsbot/bringup/config/: fwsbot_controllers.yaml  (+1 more)
src/fwsbot/hardware/: pca9685_system.cpp
src/fwsbot_gazebo/: CMakeLists.txt  package.xml
src/fwsbot_gazebo/launch/: sim.launch.py
src/fwsbot_gazebo/worlds/: empty.world
src/rrbot_cam_msgs/: CMakeLists.txt  package.xml
src/rrbot_cam_object_detector/: CMakeLists.txt  package.xml
src/rrbot_cam_object_detector/config/: hsv_detection.yaml
src/rrbot_cam_object_detector/launch/: detect_hsv.launch.py  detect_net.launch  jetson_detector.launch
src/rrbot_cam_object_detector/src/: object_detector_node.cpp
src/rrbot_cam_object_follower/: CMakeLists.txt  package.xml
src/rrbot_cam_object_follower/include/rrbot_cam_object_follower/: ObjectFollower.hpp
src/rrbot_cam_object_follower/launch/: object_follower.launch.py
src/rrbot_cam_object_follower/src/: object_follower_main.cpp
src/rrbot_cam_object_follower/src/rrbot_cam_object_follower/: ObjectFollower.cpp
src/rrbot_cam_platform_controller/: CMakeLists.txt  package.xml
src/rrbot_cam_platform_controller/launch/: platform_controller.launch.py
(+27 files in other folders)
